--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,24 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 18
-    buildToolsVersion "23.0.0 rc2"
+    compileSdkVersion 22
+    buildToolsVersion '22.0.1'
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/NOTICE'
+    }
 
     defaultConfig {
         applicationId "org.dvaletin.apps.tanukitestassignment"
         minSdkVersion 11
-        targetSdkVersion 17
+        targetSdkVersion 22
+        testInstrumentationRunner "android.test.InstrumentationTestRunner"
+
     }
 
     buildTypes {
@@ -16,11 +27,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:18.0.0'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.android.support:recyclerview-v7:22.2.1'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'org.roboguice:roboguice:3.0.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:design:22.2.1'
+    compile 'de.greenrobot:eventbus:2.4.0'
+    compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.1'
+    compile 'com.parse.bolts:bolts-android:1.2.1'
+
 }
