--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,17 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
+        android:name=".The500pxApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.dvaletin.apps.tanukitestassignment.CategoryListActivity"
+            android:name=".The500PxActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,20 +30,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="org.dvaletin.apps.tanukitestassignment.CategoryImageListActivity"
+            android:name=".CategoryImageListActivity"
             android:label="@string/title_webimage_detail"
-            android:parentActivityName=".CategoryListActivity" >
+            android:parentActivityName=".The500PxActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".WebImageListActivity" />
         </activity>
         <activity
-            android:name="org.dvaletin.apps.tanukitestassignment.WebimageActivity"
+            android:name=".WebimageActivity"
             android:label="@string/title_activity_webimage"
-            android:parentActivityName="org.dvaletin.apps.tanukitestassignment.CategoryListActivity" >
+            android:parentActivityName=".The500PxActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.dvaletin.apps.tanukitestassignment.CategoryListActivity" />
+                android:value=".The500PxActivity" />
         </activity>
     </application>
 
